I took extra one hour for this commit, i need to do some function such as total cart, total amount, clear all, search function. If you allow, i will continue tomorrow.Thanks.

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.chitsanthu.TestDemo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "2259e7cb-48fb-484b-bde0-9a36a5bdd512"
+      }
     }
   }
 }
